# COMP7082-group6

api/: .env.example  Makefile  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 68da44aa7dce_remove_password_hash_from_user_table.py  863c2be211e3_initial_schema.py  90f2b67696dc_add_email_auth_provider.py
api/app/: main.py
api/app/modules/auth/: ARCHITECTURE.md  QUICK_START.md  README.md  __init__.py  base.py  dependencies.py  example_usage.py  helpers.py  models.py  routes.py
api/app/modules/auth/providers/: README.md  __init__.py
api/app/modules/scraper/: routes.py  service.py
api/app/modules/users/: routes.py
api/app/shared/: config.py
api/app/shared/db/: base.py  mixins.py  session.py
api/app/shared/db/models/: __init__.py  auth_provider.py  user.py  user_auth.py
api/app/shared/helpers/: dict_helpers.py
api/app/shared/models/: auth_user.py  scrape.py
api/scripts/: README.md  __init__.py  example_using_auth_provider.py  generate_secrets.py  seed_data.py  seed_with_models.py
frontend/: index.html
frontend/src/: App.jsx  Configs.jsx  Home.jsx  Login.jsx  main.jsx
frontend/src/components/: ConfigSelection.jsx  DomTree.jsx  ImportConfig.jsx  NodeSelection.jsx  Sidebar.jsx  TreeNode.jsx
frontend/src/context/: UserContext.jsx
sdk/: .gitignore  Goatspeak.md  pyproject.toml
sdk/src/scrapegoat/: __init__.py  main.py
sdk/src/scrapegoat/classes/: __init__.py  command.py  conditions.py  gardener.py  goat.py  html_node.py  interpreter.py  milkmaid.py  milkman.py  sheepdog.py  shepherd.py  thistle.py  thistle_interpreter.py
(+3 files in other folders)
