[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapegoat"
version = "1.1.0"
description = "A toolkit of functions, classes, and utilities for creating web scrapers."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
  { name = "Arman Chinai", email = "chinaiarman@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
  "textual>=6.2.1",
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/ChinaiArman/scrapegoat"
Documentation = "https://github.com/ChinaiArman/scrapegoat/blob/main/README.md"
Source = "https://github.com/ChinaiArman/scrapegoat"
Issues = "https://github.com/ChinaiArman/scrapegoat/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scrapegoat" = ["gui-styles/*"]
